<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="40dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/login_user"
        android:contentDescription="@string/user_profile" />

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_access"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_login"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:text="@string/xxxxxxxx"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/tv_passwd"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_passwd"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:text="@string/_1234"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

    <Button
        android:id="@+id/bt_login"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/login_btn"
        android:textSize="12sp" />



       <Button
        android:id="@+id/bt_help"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/help"
        android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0"
        android:textSize="12sp"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorGray"/>

</LinearLayout>